# transmitter_bme_nrf

./: .gitignore  BUILD.md  CHANGELOG.md  README.md  main.py  pyproject.toml
.run/: Flash main.py.run.xml  Flash sub.run.xml
src/transmitter_bme_nrf/: __init__.py  transmitter_bme_nrf.py
